# gitlearning

./: .gitignore  firstopencv.py  learnSophus.cpp  readme.txt
cpp/learnopencv/: CMakeLists.txt  learnopencv.kdev4  main.cpp
cpp/sophus/: CMakeLists.txt
